<resources>
    <string name="app_name">MediaBrainz</string>
    <string name="delete_alert_message">Are you sure you want to delete?</string>
    <string name="rating_text">%1$.2f (%2$d)</string>
    <string name="no_ratings">0 ratings</string>
    <string name="retry">Retry</string>
    <string name="unknown">Unknown</string>
    <string name="error_connect_title">No Internet Connection</string>
    <string name="error_connect_message">Please check your internet connection and try again</string>
    <string name="select_items">Select items</string>
    <string name="select_item">Select item</string>
    <string name="select_all">Select all</string>
    <string name="choose_email_client">Choose email client and send message</string>
    <string name="send_mail_error">There are no email clients installed.</string>
    <string name="login">Log In</string>
    <string name="login_title">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_create_account">Create Account</string>
    <string name="action_forgot_username">Forgot Username</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="release_group_albums">Albums</string>
    <string name="release_group_eps">EPs</string>
    <string name="release_group_lives">Lives</string>
    <string name="release_group_compilations">Compilations</string>
    <string name="release_group_singles">Singles</string>
    <string name="release_group_official">Show only official release groups</string>
    <string name="vote_tag">Vote Tag</string>
    <string name="rate_entity">Rate: %1$s</string>
    <string name="edit_login">You must log in before you can edit!</string>
    <string name="tag_hint">Tag (genre)</string>
    <string name="description_search">Search</string>
    <string name="log_in_btn">LOG IN</string>
    <string name="artist_field_hint">Artist</string>
    <string name="album_field_hint">Album</string>
    <string name="track_field_hint">Track</string>
    <string name="search_btn">SEARCH</string>
    <string name="search_artist_title">Search Artist</string>
    <string name="search_album_title">Search Album</string>
    <string name="search_track_title">Search Track</string>
    <string name="search_tag_title">Search Tag (genre)</string>
    <string name="search_user_title">Search User</string>
    <string name="search_barcode_title">Search Barcode</string>
    <string name="no_results">No results found</string>
    <string name="connection_error">Could not connect to server…</string>
    <string name="connection_error_retry">Retry</string>
    <string name="search_track_artist_name">Artist: %1$s</string>
    <string name="search_track_album_name">Album: %1$s</string>
    <string name="searchtype_user">User</string>
    <string name="searchtype_tag">Tag (genre)</string>
    <string name="searchtype_barcode">Barcode</string>
    <string name="search_hint">Search field</string>
    <string name="about_title">About</string>
    <string name="version_text">Version</string>
    <string name="rt_album">Album</string>
    <string name="rt_broadcast">Broadcast</string>
    <string name="rt_single">Single</string>
    <string name="rt_ep">EP</string>
    <string name="rt_other">Other</string>
    <string name="rt_dj_mix">Dj-Mix</string>
    <string name="rt_compilation">Compilation</string>
    <string name="rt_mixtape">Mixtape</string>
    <string name="rt_soundtrack">Soundtrack</string>
    <string name="rt_spokenword">Spoken word</string>
    <string name="rt_interview">Interview</string>
    <string name="rt_audiobook">Audio book</string>
    <string name="rt_live">Live</string>
    <string name="rt_remix">Remix</string>
    <string name="rt_street">Street</string>
    <string name="rt_unknown">Unknown</string>
    <string name="fm_cd">CD</string>
    <string name="fm_dvd">DVD</string>
    <string name="fm_sacd">SACD</string>
    <string name="fm_dd">DualDisc</string>
    <string name="fm_ld">LaserDisc</string>
    <string name="fm_md">MiniDisc</string>
    <string name="fm_vinyl">Vinyl</string>
    <string name="fm_cassette">Cassette</string>
    <string name="fm_cartridge">Cartridge</string>
    <string name="fm_rtr">Reel-to-reel</string>
    <string name="fm_dat">DAT</string>
    <string name="fm_dm">Digital Media</string>
    <string name="fm_other">Other</string>
    <string name="fm_wax">Wax Cylinder</string>
    <string name="fm_pr">Piano Roll</string>
    <string name="fm_dcc">Digital Compact Cassette</string>
    <string name="fm_vhs">VHS</string>
    <string name="fm_vcd">Video-CD</string>
    <string name="fm_svcd">Super Video-CD</string>
    <string name="fm_bm">Betamax</string>
    <string name="fm_hdcd">HD Compatible Digital</string>
    <string name="fm_usb">USB Flash Drive</string>
    <string name="fm_sm">SlotMusic</string>
    <string name="fm_umd">Universal Media Disc</string>
    <string name="fm_hddvd">HD-DVD</string>
    <string name="fm_dvda">DVD-Audio</string>
    <string name="fm_dvdv">DVD-Video</string>
    <string name="fm_br">Blu-ray</string>
    <string name="fm_unknown">Unknown format</string>
    <string name="r_tracks">%1$s / %2$d tracks</string>
    <string name="r_barcode">Barcode: %1$s</string>
    <string name="r_status">Status: %1$s</string>
    <string name="r_catalog">Catalog: %1$s</string>
    <string name="rg_text">Choose a release</string>
    <string name="release_info_title">Release Information</string>
    <string name="release_info_format">Format:</string>
    <string name="release_info_details">Details:</string>
    <string name="release_info_details_template">%1$d tracks, %2$s</string>
    <string name="release_info_label">Label:</string>
    <string name="release_info_language">Language:</string>
    <string name="release_info_released">Released:</string>
    <string name="release_info_barcode">Barcode:</string>
    <string name="release_info_asin">Asin:</string>
    <string name="collection_add_to_new">Add to a new collection</string>
    <string name="collection_added">Entity was added to collection successfully!</string>
    <string name="collection_created">Collection was created successfully!</string>
    <string name="collection_edited">Collection was edited successfully!</string>
    <string name="collections_areas">Areas</string>
    <string name="collections_artists">Artists</string>
    <string name="collections_events">Events</string>
    <string name="collections_instruments">Instruments</string>
    <string name="collections_labels">Labels</string>
    <string name="collections_places">Places</string>
    <string name="collections_recordings">Recordings</string>
    <string name="collections_releases">Releases</string>
    <string name="collections_release_groups">Release Groups</string>
    <string name="collections_series">Series</string>
    <string name="collections_works">Works</string>
    <string name="collection_alert_title">Delete collection %1$s</string>
    <string name="expand_all">Expand all</string>
    <string name="collection_create_title">Add a New Collection</string>
    <string name="collection_create_name">Name</string>
    <string name="collection_create_description">Description</string>
    <string name="collection_create_public">Allow other users to see this collection</string>
    <string name="collection_create_btn">Create collection</string>
    <string name="collection_create_exist_name">This collection already exists</string>
    <string name="collection_delete_entity">Delete entity from collection</string>
    <string name="collection_edit_title">Edit Collection</string>
    <string name="collection_edit_btn">Edit collection</string>
    <string name="collection_chooser_title">Choose a collection from the list.</string>
    <string name="release_collection_selector">Select the type of collections</string>
    <string name="zx_title">Install Barcode Scanner?</string>
    <string name="zx_message">This action requires Barcode Scanner. Would you like to install it?</string>
    <string name="zx_pos">Install</string>
    <string name="zx_neg">Cancel</string>
    <string name="barcode_header">Barcode %1$s not found!</string>
    <string name="barcode_info_log">This barcode is not associated with a MusicBrainz release. Would you like to add it?</string>
    <string name="barcode_info_nolog">This barcode is not associated with a MusicBrainz release. Log in to add it.</string>
    <string name="barcode_btn">Add barcode</string>
    <string name="barcode_cancel">Cancel</string>
    <string name="barcode_text_hint">Barcode</string>
    <string name="barcode_release_hint">Release</string>
    <string name="barcode_instructions">Search for release to add barcode.</string>
    <string name="barcode_invalid_length">Expected 12 digits for UPC or 13 digits for EAN</string>
    <string name="barcode_invalid_chars">Should only contain digits</string>
    <string name="barcode_added">Barcode was added successfully!</string>
    <string name="barcode_artist_text_hint">Artist</string>
    <string name="barcode_add_header">Submit barcode?</string>
    <string name="barcode_add_info">This will submit an edit for peer review. The barcode will not be added immediately.</string>
    <string name="nav_search">Advanced Search</string>
    <string name="nav_about">About</string>
    <string name="nav_scan_barcode">Scan Barcode</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_user">User</string>
    <string name="nav_user_profile">Profile</string>
    <string name="nav_user_collections">Collections</string>
    <string name="nav_user_ratings">Ratings</string>
    <string name="nav_user_tags">Tags</string>
    <string name="nav_user_recommends">Recommends</string>
    <string name="nav_user_logout">Log Out</string>
    <string name="nav_user_login">Log In</string>
    <string name="nav_support">Support</string>
    <string name="nav_feedback">Feedback</string>
    <string name="action_user_profile">User Profile</string>
    <string name="action_scan_barcode">Scan Barcode</string>
    <string name="action_search_artist">Search artist</string>
    <string name="settings_search">Search</string>
    <string name="settings_title_suggestions">Suggestions</string>
    <string name="settings_summary_suggestions">Store and display search suggestions</string>
    <string name="settings_clear_suggestions">Clear search history</string>
    <string name="settings_clear_recommends">Clear recommends</string>
    <string name="settings_title_images">Images</string>
    <string name="settings_load_images">Load images</string>
    <string name="settings_title_miscellanea">Miscellanea</string>
    <string name="send_email_subject_hint">Subject:</string>
    <string name="send_email_message_hint">Message:</string>
    <string name="send_email_send_btn">Send</string>
    <string name="send_email_reveal_email">Reveal my email address</string>
    <string name="no_releases">No releases found</string>
    <string name="title_release_tracks">Tracks</string>
    <string name="title_release_info">Info</string>
    <string name="title_release_releases">Releases</string>
    <string name="title_release_ratings">Ratings</string>
    <string name="title_release_tags">Tags</string>
    <string name="title_recording_lyrics">Lyrics</string>
    <string name="title_recording_info">Info</string>
    <string name="title_recording_releases">Releases</string>
    <string name="title_recording_ratings">Ratings</string>
    <string name="title_recording_tags">Tags</string>
</resources>