<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_24"
            android:title="@string/nav_search"/>

        <item
            android:id="@+id/nav_scan_barcode"
            android:icon="@drawable/ic_barcode_scan_24"
            android:title="@string/nav_scan_barcode"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/nav_settings"/>
    </group>

    <item android:title="@string/nav_user">
        <menu>
            <item
                android:id="@+id/nav_user_profile"
                android:icon="@drawable/ic_person_24"
                android:title="@string/nav_user_profile"/>
            <item
                android:id="@+id/nav_user_collections"
                android:icon="@drawable/ic_collections_24"
                android:title="@string/nav_user_collections"/>
            <item
                android:id="@+id/nav_user_ratings"
                android:icon="@drawable/ic_star_24"
                android:title="@string/nav_user_ratings"/>
            <item
                android:id="@+id/nav_user_tags"
                android:icon="@drawable/ic_tag_24"
                android:title="@string/nav_user_tags"/>

            <item
                android:id="@+id/nav_user_recommends"
                android:icon="@drawable/ic_thumb_up_24"
                android:title="@string/nav_user_recommends"/>

            <item
                android:id="@+id/nav_user_logout"
                android:icon="@drawable/ic_logout_24"
                android:title="@string/nav_user_logout"/>

        </menu>
    </item>

    <item android:title="@string/nav_support">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_email_24"
                android:title="@string/nav_feedback"/>

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_24"
                android:title="@string/nav_about"/>
        </menu>
    </item>
</menu>