<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_search">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="search_suggestions"
            android:summary="@string/settings_summary_suggestions"
            android:title="@string/settings_title_suggestions"/>

        <Preference
            android:key="clear_suggestions"
            android:title="@string/settings_clear_suggestions"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_title_images">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="load_images"
            android:title="@string/settings_load_images"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_title_miscellanea">

        <Preference
            android:key="clear_recommends"
            android:title="@string/settings_clear_recommends"/>

    </PreferenceCategory>


</PreferenceScreen>
