<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_24"
            android:title="@string/nav_search"/>

        <item
            android:id="@+id/nav_scan_barcode"
            android:icon="@drawable/ic_barcode_scan_24"
            android:title="@string/nav_scan_barcode"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/nav_settings"/>

        <item
            android:id="@+id/nav_user_login"
            android:icon="@drawable/ic_login_24"
            android:title="@string/nav_user_login"/>

    </group>

    <item android:title="@string/nav_support">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_email_24"
                android:title="@string/nav_feedback"/>

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_24"
                android:title="@string/nav_about"/>
        </menu>
    </item>
</menu>