<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/release_nav_tracks"
        android:icon="@drawable/ic_track_24"
        android:title="@string/title_release_tracks"/>

    <item
        android:id="@+id/release_nav_info"
        android:icon="@drawable/ic_info_24"
        android:title="@string/title_release_info"/>

    <item
        android:id="@+id/release_nav_releases"
        android:icon="@drawable/ic_album_24"
        android:title="@string/title_release_releases"/>

    <item
        android:id="@+id/release_nav_ratings"
        android:icon="@drawable/ic_star_24"
        android:title="@string/title_release_ratings"/>

    <item
        android:id="@+id/release_nav_tags"
        android:icon="@drawable/ic_tag_24"
        android:title="@string/title_release_tags"/>

</menu>
