<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="app.mediabrainz.fragment.BarcodeSearchFragment">

    <ProgressBar
        android:id="@+id/progressView"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/noresultsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_releases"
        android:textSize="@dimen/text_size_16"
        android:visibility="gone"/>

    <include
        android:id="@+id/errorView"
        layout="@layout/layout_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/containerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/barcodeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/barcode_text_hint"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/releaseSearchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/barcode_release_hint"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/barcodeSearchView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/colorPrimaryLight"
                android:contentDescription="@string/description_search"
                android:src="@drawable/ic_search_24"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <AutoCompleteTextView
                android:id="@+id/artistSearchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/barcode_artist_text_hint"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/barcodeInstructionsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/barcode_instructions"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/releaseRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </FrameLayout>

    </LinearLayout>

</FrameLayout>

