<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/contentFrameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/subjectView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/send_email_subject_hint"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <MultiAutoCompleteTextView
                    android:id="@+id/messageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/send_email_message_hint"
                    android:inputType="textMultiLine"/>

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/revealEmailCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:text="@string/send_email_reveal_email"/>

            <Button
                android:id="@+id/sendButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorPrimaryLight"
                android:text="@string/send_email_send_btn"
                android:textColor="@color/textColorOnDark"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressView"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:visibility="gone"/>

    </FrameLayout>

</android.support.v4.widget.NestedScrollView>

